# melops-ai

./: README.md
backend/: mlops_config.yml  pyproject.toml  requirements.txt
backend/.config/: config_loader.py
frontend/: package-lock.json  package.json  postcss.config.js  tsconfig.json
frontend/components/: DarkModeToggle.js
frontend/pages/: index.js
frontend/pages/api/: hello.js
frontend/pages/posts/: [id].js
frontend/src/: next.config.js
frontend/styles/: globals.css  introAnimation.module.css
frontend/tools/: tool_processor.py
